--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What's for Dinner?</title>
-    <!-- <script type="module" src="./index.js"></script> -->
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
         <h1>What's for dinner?</h1>
+        <select id="cuisine-select"></select>
+        <select id="diet-select"></select>
     </main>
 </body>
 </html>
