--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
         <h1>What's for dinner?</h1>
         <select id="cuisine-select"></select>
         <select id="diet-select"></select>
+        <button>What's For Dinner?</button>
+        <div id="recipe-card">
+            <h2 class="recipe-title" id="recipe-title">Soy-and-Ginger-Glazed Salmon with Udon Noodles</h2>
+            <img class="recipe-image" id="recipe-image" src="https://d3lp4xedbqa8a5.cloudfront.net/s3/digital-cougar-assets/food/2014/11/28/WomansDayBR111831/udon-and-salmon-noodles.jpg">
+            <ul class="recipe-ingredients" id="recipe-ingredients">
+                <li>1 tablespoon soy sauce, plus 2 tablespoons extra</li>
+                <li>1 tablespoon mirin, plus 1 tablespoon extra</li>
+                <li>1 teaspoon sugar</li>
+                <li>350 gram skinless salmon fillet, cut into 2 cm cubes</li>
+                <li>375 gram packet udon noodles</li>
+                <li>2 tablespoon vegetable oil</li>
+                <li>1 tablespoon sesame oil</li>
+                <li>1 tablespoon pickled ginger, finely sliced, plus 1 tablespoon pickling liquid</li>
+                <li>1 bunch broccolini, chopped, steamed</li>
+            </ul>
+            <ol class="recipe-steps" id="recipe-steps"></ol>
+        </div>
     </main>
 </body>
 </html>
