created a basic MVP style template for approval

--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
         <select id="cuisine-select"></select>
         <select id="diet-select"></select>
         <button>What's For Dinner?</button>
-        <div id="recipe-card">
+        <div class="recipe-card" id="recipe-card">
+            <div class="recipe-hero" id="recipe-hero" style="background-image: url('https://d3lp4xedbqa8a5.cloudfront.net/s3/digital-cougar-assets/food/2014/11/28/WomansDayBR111831/udon-and-salmon-noodles.jpg');">
+                <div class="hero-overlay"></div>
+            </div>
             <h2 class="recipe-title" id="recipe-title">Soy-and-Ginger-Glazed Salmon with Udon Noodles</h2>
-            <img class="recipe-image" id="recipe-image" src="https://d3lp4xedbqa8a5.cloudfront.net/s3/digital-cougar-assets/food/2014/11/28/WomansDayBR111831/udon-and-salmon-noodles.jpg">
+            <label class="switch">
+                <input type="checkbox">
+                <span class="slider"></span>
+            </label>
             <ul class="recipe-ingredients" id="recipe-ingredients">
                 <li>1 tablespoon soy sauce, plus 2 tablespoons extra</li>
                 <li>1 tablespoon mirin, plus 1 tablespoon extra</li>
