moved form to header

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <h1>What's for dinner?</h1>
+    <header>
         <select id="cuisine-select"></select>
         <select id="diet-select"></select>
         <button>What's For Dinner?</button>
+    </header>
+    <main>
         <div class="recipe-card" id="recipe-card">
             <div class="recipe-hero" id="recipe-hero" style="background-image: url('https://d3lp4xedbqa8a5.cloudfront.net/s3/digital-cougar-assets/food/2014/11/28/WomansDayBR111831/udon-and-salmon-noodles.jpg');">
                 <div class="hero-overlay"></div>
