styled header with drop down menus and button

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 </head>
 <body>
     <header>
-        <select id="cuisine-select"></select>
-        <select id="diet-select"></select>
-        <button>What's For Dinner?</button>
+        <div class="header-wrapper">
+            <div class="select-wrapper">
+                <select id="cuisine-select"></select>
+                <select id="diet-select"></select>
+            </div>
+            <button>What's For Dinner?</button>
+        </div>
     </header>
     <main>
         <div class="recipe-card" id="recipe-card">
