added mobile settings button and hid select menus for mobile

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 <select id="cuisine-select"></select>
                 <select id="diet-select"></select>
             </div>
+            <a href="javascript:void(0);" class="settings-button" onclick="myFunction()">
+                <img src="./assets/tune.svg">
+              </a>
             <button>What's For Dinner?</button>
         </div>
     </header>
