--- a/index.html
+++ b/index.html
@@ -15,18 +15,16 @@
                 <select id="cuisine-select"></select>
                 <select id="diet-select"></select>
             </div>
-            <a href="javascript:void(0);" class="settings-button" onclick="myFunction()">
-                <img src="./assets/tune.svg">
-              </a>
             <button>What's For Dinner?</button>
         </div>
     </header>
+    <h2>Tonight we're having...</h2>
     <main>
         <div class="recipe-card" id="recipe-card">
             <div class="recipe-hero" id="recipe-hero" style="background-image: url('https://d3lp4xedbqa8a5.cloudfront.net/s3/digital-cougar-assets/food/2014/11/28/WomansDayBR111831/udon-and-salmon-noodles.jpg');">
                 <div class="hero-overlay"></div>
             </div>
-            <h2 class="recipe-title" id="recipe-title">Soy-and-Ginger-Glazed Salmon with Udon Noodles</h2>
+            <h3 class="recipe-title" id="recipe-title">Soy-and-Ginger-Glazed Salmon with Udon Noodles</h3>
             <label class="switch">
                 <input type="checkbox">
                 <span class="slider"></span>
