making some functions to fill dynamic variables

--- a/index.html
+++ b/index.html
@@ -24,21 +24,12 @@
             <div class="recipe-hero" id="recipe-hero" style="background-image: url('https://d3lp4xedbqa8a5.cloudfront.net/s3/digital-cougar-assets/food/2014/11/28/WomansDayBR111831/udon-and-salmon-noodles.jpg');">
                 <div class="hero-overlay"></div>
             </div>
-            <h3 class="recipe-title" id="recipe-title">Soy-and-Ginger-Glazed Salmon with Udon Noodles</h3>
+            <h3 class="recipe-title" id="recipe-title"></h3>
             <label class="switch">
                 <input type="checkbox">
                 <span class="slider"></span>
             </label>
             <ul class="recipe-ingredients" id="recipe-ingredients">
-                <li>1 tablespoon soy sauce, plus 2 tablespoons extra</li>
-                <li>1 tablespoon mirin, plus 1 tablespoon extra</li>
-                <li>1 teaspoon sugar</li>
-                <li>350 gram skinless salmon fillet, cut into 2 cm cubes</li>
-                <li>375 gram packet udon noodles</li>
-                <li>2 tablespoon vegetable oil</li>
-                <li>1 tablespoon sesame oil</li>
-                <li>1 tablespoon pickled ginger, finely sliced, plus 1 tablespoon pickling liquid</li>
-                <li>1 bunch broccolini, chopped, steamed</li>
             </ul>
             <ol class="recipe-steps" id="recipe-steps"></ol>
         </div>
