--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>What's for Dinner?</title>
     <script type="module" src="./index.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -19,6 +22,7 @@
         </div>
     </header>
     <h2>Tonight we're having...</h2>
+    <div class="spinner" id="spinner"></div>
     <main>
         <div class="recipe-card" id="recipe-card">
             <div class="recipe-hero" id="recipe-hero">
