added event listener for recipe switch and created a function to switch from ingredients to steps

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             </div>
             <h3 class="recipe-title" id="recipe-title"></h3>
             <label class="switch">
-                <input type="checkbox">
+                <input type="checkbox" id="recipe-switch">
                 <span class="slider"></span>
             </label>
-            <ul class="recipe-ingredients" id="recipe-ingredients">
+            <ul class="recipe-body" id="recipe-body">
             </ul>
             <ol class="recipe-steps" id="recipe-steps"></ol>
         </div>
