added function that un-camel-cases string and big message changes dynamically

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button>What's For Dinner?</button>
         </div>
     </header>
-    <h2>Tonight we're having...</h2>
+    <h2 id="big-message">Tonight we're having...</h2>
     <div class="spinner" id="spinner"></div>
     <main>
         <div class="recipe-card" id="recipe-card">
