made changes to svg path

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </div>
     </header>
     <div class="container">
-        <svg viewBox="0 0 500 500" preserveAspectRatio="xMinYMin meet">
-          <path d="M0,300 C300,370 400,0 650,350 L500,00 L0,0 Z" style="stroke: none; fill:#181D27;"></path>
+        <svg viewBox="0 0 500 500" >
+          <path d="M0,100 C300,370 400,0 650,350 L500,00 L0,0 Z" style="stroke: none; fill:#181D27;"></path>
         </svg>
       </div>
     <h2>Tonight we're having...</h2>
