--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
           <path d="M0,300 C300,370 400,0 650,350 L500,00 L0,0 Z" style="stroke: none; fill:#181D27;"></path>
         </svg>
       </div>
-    <h2 id="big-message">Tonight we're having...</h2>
+      <div id="big-message">
+          <h2>Uninspired for dinner?</h2>
+          <ol>
+            <li>Select a Cuisine</li>
+            <li>Select a Diet</li>
+            <li>Click 'What's For Dinner?'</li>
+          </ol>
+      </div>
     <div class="spinner" id="spinner"></div>
     <main>
         <div class="recipe-card" id="recipe-card">
