updated initial message

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <button>What's For Dinner?</button>
         </div>
     </header>
-      <div id="big-message">
-          <h2>Uninspired for dinner?</h2>
-          <ol>
-            <li>Select a Cuisine</li>
-            <li>Select a Diet</li>
-            <li>Click 'What's For Dinner?'</li>
-          </ol>
-      </div>
     <div class="spinner" id="spinner"></div>
     <main>
+        <div id="big-message">
+            <h2>Uninspired for dinner?</h2>
+            <div id="greeting">
+                <p>🍴 Select a Cuisine</p>
+                <p>🥑 Select a Diet</p>
+                <p>🧑‍🍳 Click 'What's For Dinner?'</p>
+            </div>
+        </div>
         <div class="recipe-card" id="recipe-card">
             <div class="recipe-hero" id="recipe-hero">
                 <div class="hero-overlay"></div>
