--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
                 <input type="checkbox" id="recipe-switch">
                 <span class="slider"></span>
             </label>
-            <ul class="recipe-body" id="recipe-body">
-            </ul>
-            <ol class="recipe-steps" id="recipe-steps"></ol>
+            <div class="recipe-body" id="recipe-body"></div>
         </div>
     </main>
 </body>
