changed emojis and favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍜</text></svg>">
     <title>What's for Dinner?</title>
     <script type="module" src="./index.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -28,7 +29,7 @@
             <div id="greeting">
                 <p>🍴 Select a Cuisine</p>
                 <p>🥑 Select a Diet</p>
-                <p>🧑‍🍳 Click 'What's For Dinner?'</p>
+                <p>🍜 Click 'What's For Dinner?'</p>
             </div>
         </div>
         <div class="recipe-card" id="recipe-card">
