--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="spinner" id="spinner"></div>
     <main>
         <div id="big-message">
-            <h2>Uninspired for dinner?</h2>
+            <h2>Feeling uninspired?</h2>
             <div id="greeting">
                 <p>🍴 Select a Cuisine</p>
                 <p>🥑 Select a Diet</p>
@@ -38,7 +38,8 @@
             <h3 class="recipe-title" id="recipe-title"></h3>
             <label class="switch">
                 <input type="checkbox" id="recipe-switch">
-                <span class="slider"></span>
+                <span class="ingredients-button">Ingredients</span>
+                <span class="steps-button">Steps</span>
             </label>
             <div class="recipe-body" id="recipe-body"></div>
         </div>
