fixed footer bug

--- a/index.html
+++ b/index.html
@@ -45,5 +45,9 @@
             <div class="recipe-body" id="recipe-body"></div>
         </div>
     </main>
+    <footer>
+        <span>Made for Coder Academy Hackathon</span>
+        <span>Riki Fujihara & Stephen Smith 2022</span>
+    </footer>
 </body>
 </html>
