set custom css variables for font-sizes and consulted a font size guide for ideal sizes on mobile and browser

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </main>
     <footer>
         <span>Made for Coder Academy Hackathon</span>
-        <span>Riki Fujihara & Stephen Smith 2022</span>
+        <span>Riki Fujihara & Stephen Smith © 2022</span>
     </footer>
 </body>
 </html>
